--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,11 @@
     padding: 0;
 }
 
+html
+{
+    scroll-behavior: smooth;
+}
+  
 body
 {
     font-family: Arial, Helvetica, sans-serif;
@@ -82,6 +87,19 @@ ul
 {
     margin-left: 20px;
 }
+
+#about-section
+{
+    scroll-margin-top: 320px;
+}
+
+#work-section
+{
+    scroll-margin-top: 70px;
+}
+
+
+
 /* navigation end */
 
 /* header start */
