--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,7 +150,7 @@ ul
     color: #fff;
     margin: 20px 10px;
     padding: 15px 20px;
-    border-right: 2px solid #4D090C;
+    border-right: 2px solid #6E6E6E;
     text-align: right;
 }
 
@@ -177,7 +177,7 @@ ul
     color: #fff;
     margin: 20px 10px;
     padding: 15px 20px;
-    border-right: 2px solid #4D090C;
+    border-right: 2px solid #6E6E6E;
     text-align: right;
 }
 
@@ -200,26 +200,26 @@ ul
 {
     flex: 100%;
     height: 400px;
-    background-image: url('../images/header-image.jpg'); 
+    background-image: url('../images/p1.jpg'); 
 }
 
 .work-content .work-project:nth-child(2)
 {
-    background-image: url('../images/header-image.jpg'); 
+    background-image: url('../images/p2.jpg'); 
 }
 
 .work-content .work-project:nth-child(3)
 {
-    background-image: url('../images/header-image.jpg');
+    background-image: url('../images/p3.jpg');
 }
 
 .work-content .work-project:nth-child(4)
 {
-    background-image: url('../images/header-image.jpg');
+    background-image: url('../images/p4.jpg');
 }
 .work-content .work-project:nth-child(5)
 {
-    background-image: url('../images/header-image.jpg');
+    background-image: url('../images/p5.jpg');
 }
 
 .work-project
@@ -232,7 +232,17 @@ ul
     margin: 5px 5px 5px 0;
     flex: 40%;
     height: 150px;
-  }
+    background-size: cover;
+    background-position: center;
+}
+
+.work-project h2
+{
+    text-align: center;
+    border-color: #fff;
+    background-color: #323232;
+    border-radius: 35px;
+}
 /* work section end */
 
 /* contact section start */
@@ -249,7 +259,7 @@ ul
     color: #fff;
     margin: 20px 10px;
     padding: 15px 20px;
-    border-right: 2px solid #4D090C;
+    border-right: 2px solid #6E6E6E;
     text-align: right;
 }
 
