--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,9 +97,6 @@ ul
 {
     scroll-margin-top: 70px;
 }
-
-
-
 /* navigation end */
 
 /* header start */
@@ -253,6 +250,15 @@ ul
     padding-top: 40px;
 }
 
+.contact a
+{
+    font-size: 1.1em;
+    color: #FFFFFF;
+    text-decoration: none;
+    margin-right: 30px;
+    border-bottom: 2px solid #6E6E6E;
+}
+
 .contact-title 
 {
     flex: 1;
@@ -322,6 +328,11 @@ ul
         flex-direction: column;
         padding-top: 20px;
         text-align: center;
+    }
+
+    .contact a
+    {
+        margin: 50px;
     }
 }
 /* iphone support end*/
