--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+:root 
+{
+    --primary-color: #fff;
+    --secondary-color: #6E6E6E;
+}
+
 * 
 {
     box-sizing: border-box;
@@ -22,6 +28,7 @@ body
 h1, h2
 {
     margin-bottom: 15px;
+    text-shadow: 1px 5px rgba(0, 0, 0, 0.5);
 }
 
 h2
@@ -49,7 +56,7 @@ ul
     position: fixed;
     width: 100%;
     background: #111111;
-    color: #fff;
+    color: var(--primary-color);
     height: 90px;
     display: flex;
     justify-content: space-between;
@@ -71,7 +78,7 @@ ul
 
 .navbar a
 {
-    color: #fff;
+    color: var(--primary-color);
     text-decoration: none;
     font-size: 18px;
     font-weight: bold;
@@ -111,7 +118,7 @@ ul
     background-image: url('../images/header-image.jpg');
     background-size: cover;
     background-position: center;
-    color: #fff;
+    color: var(--primary-color);
     height: 700px;
 }
 
@@ -150,17 +157,17 @@ ul
 .about-title 
 {
     flex: 1;
-    color: #fff;
+    color: var(--primary-color);
     margin: 20px 10px;
     padding: 15px 20px;
-    border-right: 2px solid #6E6E6E;
+    border-right: 2px solid var(--secondary-color);
     text-align: right;
 }
 
 .about-content 
 {
     flex: 3;
-    color: #fff;
+    color: var(--primary-color);
     margin: 20px 10px;
     padding: 15px 20px;
 }
@@ -177,17 +184,17 @@ ul
 .work-title 
 {
     flex: 1;
-    color: #fff;
+    color: var(--primary-color);
     margin: 20px 10px;
     padding: 15px 20px;
-    border-right: 2px solid #6E6E6E;
+    border-right: 2px solid var(--secondary-color);
     text-align: right;
 }
 
 .work-content 
 {
     flex: 3;
-    color: #fff;
+    color: var(--primary-color);
     margin: 20px 10px;
     padding: 15px 20px;
     height: 100%;
@@ -228,8 +235,8 @@ ul
 .work-project
 {
     flex: 1;
-    border: 3px solid #fff;
-    color: #fff;
+    border: 3px solid var(--primary-color);
+    color: var(--primary-color);
     border-radius: 30px;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.6);
     margin: 5px 5px 5px 0;
@@ -242,7 +249,7 @@ ul
 .work-project h2
 {
     text-align: center;
-    border-color: #fff;
+    border-color: var(--primary-color);
     background-color: #323232;
     border-radius: 35px;
 }
@@ -259,26 +266,26 @@ ul
 .contact a
 {
     font-size: 1.1em;
-    color: #FFFFFF;
+    color: var(--primary-color);
     text-decoration: none;
     margin-right: 30px;
-    border-bottom: 2px solid #6E6E6E;
+    border-bottom: 2px solid var(--secondary-color);
 }
 
 .contact-title 
 {
     flex: 1;
-    color: #fff;
+    color: var(--primary-color);
     margin: 20px 10px;
     padding: 15px 20px;
-    border-right: 2px solid #6E6E6E;
+    border-right: 2px solid var(--secondary-color);
     text-align: right;
 }
 
 .contact-content 
 {
     flex: 3;
-    color: #fff;
+    color: var(--primary-color);
     margin: 20px 10px;
     padding: 15px 20px;
 }
@@ -304,7 +311,7 @@ ul
     .about-title, .contact-title, .work-title
     {
         border-right: none;
-        border-bottom: 2px solid #6E6E6E;
+        border-bottom: 2px solid var(--secondary-color);
         text-align: center;
     }
 
