--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ h2
 
 .container
 {
-    max-width: 1100px;
+    max-width: 1500px;
     margin: 0 auto;
     padding: 0 30px;
     flex-wrap: wrap;
@@ -234,25 +234,42 @@ ul
 
 .work-project
 {
-    flex: 1;
-    border: 3px solid var(--primary-color);
+    flex: 1 1 40%;
+    border: 5px solid gray;
     color: var(--primary-color);
-    border-radius: 30px;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.6);
-    margin: 5px 5px 5px 0;
-    flex: 40%;
+    margin: 8px;
     height: 150px;
     background-size: cover;
     background-position: center;
+    position: relative;
+}
+
+.work-project h2, .work-project .lang-used
+{
+    text-align: center;
+}
+
+.work-project .lang-used
+{
+    font-size: 12px;
+    margin-top: 3px;
 }
 
 .work-project h2
 {
-    text-align: center;
-    border-color: var(--primary-color);
-    background-color: #323232;
-    border-radius: 35px;
+    position: absolute;
+    bottom: 0;
+    width: 150px;
+    height: 80px;
+    font-size: 1.5rem;
+    background-color: gray;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
+
 /* work section end */
 
 /* contact section start */
