--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,6 +182,13 @@ ul
     margin: 20px 10px;
     padding: 15px 20px;
 }
+
+.about-content p
+{
+    font-size: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-bottom: 40px;
+}
 /* about me section end */
 
 /* work section start */
