--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,12 +246,13 @@ ul
 .work-content .work-project:nth-child(5)
 {
     filter: brightness(0.8);
-    transition: filter 0.5s ease;
+    transition: filter 0.5s ease, transform 0.5s ease;
 }
 
 .work-content .work-project:hover
 {
     filter: brightness(1.0);
+    transform: scale(1.05);
 }
 
 .work-project
